enable metered usage
